--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/ActivoFijo/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/ActivoFijo/Nuevo.cshtml
@@ -238,7 +238,7 @@
                     </div>
                 </div>
             </div>
-            <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_caracteristicas">
+            @*<div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_caracteristicas">
 
                 <div class="row">
                     <div class="col-md-12">
@@ -280,7 +280,7 @@
                     </div>
                 </div>
 
-            </div>
+            </div>*@
 
             <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_detalle">
 
