--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/ActivoFijo/Importar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/ActivoFijo/Importar.cshtml
@@ -100,9 +100,9 @@
             <li>
                 <a href="#tab_activo_fijo" aria-controls="vales" role="tab" data-toggle="tab">Activo fijo</a>
             </li>
-            <li>
+            @*<li>
                 <a href="#tab_gastos_depreciacion" aria-controls="vales" role="tab" data-toggle="tab">Gastos depreciación</a>
-            </li>
+            </li>*@
         </ul>
         <div class="tab-content" style="padding-top: 20px">
             <div role="tabpanel" class="tab-pane active" style="margin-left: 1em;" id="tab_tipo">
@@ -155,7 +155,7 @@
                 </div>
             </div>
 
-            <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_gastos_depreciacion">
+            @*<div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_gastos_depreciacion">
                 <div class="row">
                     <div class="col-md-12">
                         <div class="col-md-12">
@@ -163,7 +163,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>*@
         </div>
     </div>
     
