--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/ActivoFijo/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/ActivoFijo/Modificar.cshtml
@@ -12,11 +12,19 @@
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 @using (Html.BeginForm("Modificar", "ActivoFijo", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
+    if (ViewBag.mensaje != null)
+    {
+        <div class="alert alert-warning alert-dismissible">
+            <h4>
+                <i class="icon fa fa-warning"></i> @ViewBag.mensaje
+            </h4>
+        </div>
+    }
+
     @Html.HiddenFor(q => q.IdEmpresa);
     @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" });
     @Html.HiddenFor(q => q.Estado_Proceso);
     @Html.HiddenFor(q => q.IdActivoFijo, new { @id = "IdActivoFijo" });
-
 
     <div class="row">
         <div class="col-md-12">
@@ -105,11 +113,18 @@
 
     <div class="row">
         <div class="col-md-12">
-            <div class="col-md-12">
+            <div class="col-md-10">
                 <div class="form-group">
                     <label for="Af_Nombre">Nombre*</label>
                     @Html.TextBoxFor(q => q.Af_Nombre, new { @class = "form-control" })
                     @Html.ValidationMessageFor(q => q.Af_Nombre, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-2">
+                <div class="form-group">
+                    <label for="Af_Nombre">Cantidad*</label>
+                    @Html.TextBoxFor(q => q.Cantidad, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.Cantidad, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
@@ -133,9 +148,6 @@
             </li>
             <li>
                 <a href="#tab_caracteristicas" aria-controls="caracteristicas" role="tab" data-toggle="tab">Características del activo</a>
-            </li>
-            <li>
-                <a href="#tab_detalle" aria-controls="detalle" role="tab" data-toggle="tab">Distribución de depreciación</a>
             </li>
             <li>
                 <a href="#tab_encargado" aria-controls="encargado" role="tab" data-toggle="tab">Encargado</a>
@@ -279,34 +291,9 @@
                         </div>
                     </div>
                 </div>
-
-            </div>
-
-            <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_detalle">
-
-
-
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="col-md-12">
-                            <div class="form-group">
-                                @Html.Action("GridViewPartial_activo_fijo_ctacble")
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
-
-
-
-
-
             </div>
 
             <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_encargado">
-
-
                 <div class="row">
                     <div class="col-md-12">
                         <div class="col-md-12">
@@ -329,22 +316,12 @@
                         </div>
                     </div>
                 </div>
-
-
-
-
-
             </div>
 
             <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_imagen">
-
-
                 <div class="row">
                     <div class="col-md-12">
                         <div class="col-md-2">
-
-
-
                             <script type="text/javascript">
                                 function onUploadControlFileUploadComplete(s, e) {
                                     if (e.isValid)
@@ -370,9 +347,6 @@
                                 }
                             </script>
 
-                                
-                                
-                                
                             <div class="uploadContainer">
                                 @Html.DevExpress().UploadControl(settings => {
                                settings.ShowProgressPanel = true;
@@ -409,15 +383,9 @@
                                    settings.Properties.EnableServerResize = true;
                                }).Bind((Model.imagen_af).ToArray()).GetHtml()
                         </div>
-
-
-
-
                     </div>
-
                 </div>
             </div>
-
         </div>
     </div>
     <div class="box-footer">
