--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ActaFiniquito/_GridViewPartial_liquidacion_empleado_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ActaFiniquito/_GridViewPartial_liquidacion_empleado_det.cshtml
@@ -62,7 +62,7 @@
         settings.Columns.Add(column =>
         {
             column.FieldName = "Observacion";
-            column.Caption = "Descripción";
+            column.Caption = "Observación";
             column.Width = Unit.Percentage(60);
             column.EditFormSettings.Visible = DefaultBoolean.True;
         });
