--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/DevolucionInventario/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/DevolucionInventario/Nuevo.cshtml
@@ -172,6 +172,7 @@
                 </div>
             </div>
             <div class="col-md-6" style="align-items:center">
+                <label for="IdModal"></label>
                 <button type="button" class="btn bottom btn-primary" id="btn_buscar" onclick="MostrarModal();">
                     <i class="fa fa-search"></i>
                 </button>
