--- a/ERP/Core.Erp.Web/Areas/Banco/Views/DepositoBanco/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/DepositoBanco/Modificar.cshtml
@@ -295,7 +295,7 @@ function GetListBancoPorSucursal() {
                     @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-offset-5 col-md-2">
                 <div class="form-group">
                     <label for="cb_Fecha">Fecha:*</label>
                     <div class="input-group date">
@@ -315,14 +315,18 @@ function GetListBancoPorSucursal() {
                     </div>
                 </div>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-1">
                 <label for="IdImprimir"></label>
                 <div class="form-group">
-                    <button type="button" class="btn btn-primary" id="btn_imprimir" onclick="Imprimir();" title="Imprimir">
+                    <button type="button" class="btn btn-primary form-control" id="btn_imprimir" onclick="Imprimir();" title="Imprimir">
                         <i class="fa fa-print"></i>
                     </button>
-                    &nbsp;&nbsp;
-                    <a type="button" class="btn btn-primary" href="@Url.Action("Nuevo","DepositoBanco",new { Area = "Banco", IdEmpresa = Model.IdEmpresa },null)">
+                </div>
+            </div>
+            <div class="col-md-1">
+                <label for="IdImprimir"></label>
+                <div class="form-group">
+                    <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo","DepositoBanco",new { Area = "Banco", IdEmpresa = Model.IdEmpresa },null)">
                         <i class="fa fa-plus"></i>
                     </a>
                 </div>
