--- a/ERP/Core.Erp.Web/Areas/Caja/Views/CajaMovimientoIngreso/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/CajaMovimientoIngreso/Anular.cshtml
@@ -150,7 +150,7 @@
         </div>
     </div>
 
-    @if (!(ViewBag.NoMostrarBotones ?? true))
+    if (!(ViewBag.NoMostrarBotones ?? true))
     {
         <div class="box-footer">
             <button type="submit" class="btn btn-danger">Anular</button>
