--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/LiquidacionTarjetaCredito/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/LiquidacionTarjetaCredito/Modificar.cshtml
@@ -162,105 +162,115 @@
 
         </div>
     </div>
-
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-3">
-                <div class="form-group">
-                    <label for="IdSucursal">Sucursal:*</label>
-                    @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_Descripcion"), new { @class = "form-control", @disabled = "disabled" })
-                    @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="form-group">
-                    <label for="IdBanco">Cuenta bancaria:*</label>
-                    @Html.DropDownListFor(q => q.IdBanco, new SelectList(ViewBag.lst_banco_cuenta, "IdBanco", "ba_descripcion"), new { @class = "form-control", @id = "IdBanco" })
-                    @Html.ValidationMessageFor(q => q.IdBanco, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="col-md-1">
-                <div class="form-group">
-                    <label for="Lote">Lote:</label>
-                    @Html.TextBoxFor(q=> q.Lote, new { @id = "Lote", @class = "form-control" })
-                    @Html.ValidationMessageFor(q => q.Lote, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="col-md-2">
-                <div class="form-group">
-                    <label for="cb_Fecha">Fecha:*</label>
-                    <div class="input-group date">
-                        <div class="input-group-addon">
-                            <i class="fa fa-calendar"></i>
-                        </div>
-                        @Html.DevExpress().DateEditFor(q => q.Fecha, settings =>
-                   {
-                       settings.Name = "Fecha";
-                       settings.Properties.UseMaskBehavior = true;
-                       settings.Properties.EditFormat = EditFormat.Date;
-                       settings.Properties.EditFormatString = "dd/MM/yyyy";
-                       settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
-                       settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                   }).GetHtml()
-                        @Html.ValidationMessageFor(q => q.Fecha, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-2">
-                <button type="button" class="btn btn-primary" id="btn_imprimir" onclick="Imprimir();" title="Imprimir">
-                    <i class="fa fa-print"></i>
-                </button>
-                &nbsp;&nbsp;
-                <a type="button" class="btn btn-primary" title="Nuevo" href="@Url.Action("Nuevo","LiquidacionTarjetaCredito",new { Area = "CuentasPorCobrar", IdEmpresa = Model.IdEmpresa },null)">
-                    <i class="fa fa-plus"></i>
-                </a>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
+        <div class="row">
             <div class="col-md-12">
-                <div class="form-group">
-                    <label for="cb_Observacion">Observación</label>
-                    @Html.TextAreaFor(q => q.Observacion, new { @id = "cb_Observacion", @class = "form-control", @rows = 2 })
-                    @Html.ValidationMessageFor(q => q.Observacion, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div id="Tabs" role="tabpanel">
-        <ul class="nav nav-tabs" role="tablist">
-            <li class="active">
-                <a href="#tab_cobros_pendientes" aria-controls="vales" role="tab" data-toggle="tab">Cobros</a>
-            </li>
-            <li>
-                <a href="#tab_motivos_liquidacion" aria-controls="vales" role="tab" data-toggle="tab">Motivos</a>
-            </li>
-        </ul>
-        <div class="tab-content" style="padding-top: 20px">
-            <div role="tabpanel" class="tab-pane active" style="margin-left: 1em;" id="tab_cobros_pendientes">
-                <div class="row">
-                    <div class="col-md-12">
-                        <button type="button" class="btn btn-primary" id="btn_buscar_cobrospendientes" onclick="MostrarModal();">
-                            <i class="fa fa-search"></i>
+                <div class="col-md-offset-10 col-md-1">
+                    <label for="IdImprimir"></label>
+                    <div class="form-group">
+                        <button type="button" class="btn btn-primary form-control" id="btn_imprimir" onclick="Imprimir();" title="Imprimir">
+                            <i class="fa fa-print"></i>
                         </button>
                     </div>
                 </div>
-                <br />
-                @Html.Action("GridViewPartial_CobrosLiquidacion")
-            </div>
-            <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_motivos_liquidacion">
-                @Html.Action("GridViewPartial_MotivosLiquidacion")
+                <div class="col-md-1">
+                    <label for="IdNuevo"></label>
+                    <div class="form-group">
+                        <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo","LiquidacionTarjetaCredito",new { Area = "CuentasPorCobrar", IdEmpresa = Model.IdEmpresa },null)">
+                            <i class="fa fa-plus"></i>
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <label for="IdSucursal">Sucursal:*</label>
+                        @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_Descripcion"), new { @class = "form-control", @disabled = "disabled" })
+                        @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label for="IdBanco">Cuenta bancaria:*</label>
+                        @Html.DropDownListFor(q => q.IdBanco, new SelectList(ViewBag.lst_banco_cuenta, "IdBanco", "ba_descripcion"), new { @class = "form-control", @id = "IdBanco" })
+                        @Html.ValidationMessageFor(q => q.IdBanco, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="form-group">
+                        <label for="Lote">Lote:</label>
+                        @Html.TextBoxFor(q => q.Lote, new { @id = "Lote", @class = "form-control" })
+                        @Html.ValidationMessageFor(q => q.Lote, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <div class="col-md-offset-1 col-md-2">
+                    <div class="form-group">
+                        <label for="cb_Fecha">Fecha:*</label>
+                        <div class="input-group date">
+                            <div class="input-group-addon">
+                                <i class="fa fa-calendar"></i>
+                            </div>
+                            @Html.DevExpress().DateEditFor(q => q.Fecha, settings =>
+                           {
+                               settings.Name = "Fecha";
+                               settings.Properties.UseMaskBehavior = true;
+                               settings.Properties.EditFormat = EditFormat.Date;
+                               settings.Properties.EditFormatString = "dd/MM/yyyy";
+                               settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                               settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                           }).GetHtml()
+                            @Html.ValidationMessageFor(q => q.Fecha, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <label for="cb_Observacion">Observación</label>
+                        @Html.TextAreaFor(q => q.Observacion, new { @id = "cb_Observacion", @class = "form-control", @rows = 2 })
+                        @Html.ValidationMessageFor(q => q.Observacion, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+            </div>
+        </div>
 
-    <div class="box-footer">
-        <button type="submit" class="btn btn-primary">Guardar</button>
-        <a class="btn btn-default" href="@Url.Action("Index", "LiquidacionTarjetaCredito", new { Area = "CuentasPorCobrar" }, null)">Cancelar</a>
-    </div>
-    @section Scripts {
-        @Scripts.Render("~/bundles/jqueryval")
-    }
-}
+        <div id="Tabs" role="tabpanel">
+            <ul class="nav nav-tabs" role="tablist">
+                <li class="active">
+                    <a href="#tab_cobros_pendientes" aria-controls="vales" role="tab" data-toggle="tab">Cobros</a>
+                </li>
+                <li>
+                    <a href="#tab_motivos_liquidacion" aria-controls="vales" role="tab" data-toggle="tab">Motivos</a>
+                </li>
+            </ul>
+            <div class="tab-content" style="padding-top: 20px">
+                <div role="tabpanel" class="tab-pane active" style="margin-left: 1em;" id="tab_cobros_pendientes">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <button type="button" class="btn btn-primary" id="btn_buscar_cobrospendientes" onclick="MostrarModal();">
+                                <i class="fa fa-search"></i>
+                            </button>
+                        </div>
+                    </div>
+                    <br />
+                    @Html.Action("GridViewPartial_CobrosLiquidacion")
+                </div>
+                <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_motivos_liquidacion">
+                    @Html.Action("GridViewPartial_MotivosLiquidacion")
+                </div>
+            </div>
+        </div>
+
+        <div class="box-footer">
+            <button type="submit" class="btn btn-primary">Guardar</button>
+            <a class="btn btn-default" href="@Url.Action("Index", "LiquidacionTarjetaCredito", new { Area = "CuentasPorCobrar" }, null)">Cancelar</a>
+        </div>
+        @section Scripts {
+            @Scripts.Render("~/bundles/jqueryval")
+        }
+        }
