--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaCredito/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaCredito/Modificar.cshtml
@@ -101,6 +101,28 @@
     @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     @Html.HiddenFor(q => q.IdCbteCble_Nota)
     @Html.HiddenFor(q => q.IdTipoCbte_Nota)
+
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-offset-10 col-md-1">
+                <label for="IdImprimir"></label>
+                <div class="form-group">
+                    <button type="button" class="btn btn-primary form-control" id="btn_imprimir" onclick="Imprimir();" title="Imprimir">
+                        <i class="fa fa-print"></i>
+                    </button>
+                </div>
+            </div>
+            <div class="col-md-1">
+                <label for="IdImprimir"></label>
+                <div class="form-group">
+                    <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo","NotaCredito",new { Area = "CuentasPorPagar", IdEmpresa = Model.IdEmpresa },null)">
+                        <i class="fa fa-plus"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="row">
         <div class="col-md-6">
             <div class="col-md-6">
@@ -183,34 +205,23 @@
     </div>
     <div class="row">
         <div class="col-md-6">
-            <div class="col-md-11">
+            <div class="col-md-10">
                 <div class="form-group">
                     <label for="IdProveedor">Proveedor*</label>
                     @Html.Partial("_CmbProveedor_CXP", Model.IdProveedor)
                     @Html.ValidationMessageFor(q => q.IdProveedor, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-1">
+            <div class="col-md-2">
                 <div class="form-group">
                     <label for="IdCliente"></label>
-                    <button type="button" class="btn btn-primary" title="Modificar proveedor" onclick="CrearModificarProveedor();">
+                    <button type="button" class="btn btn-primary form-control" title="Modificar proveedor" onclick="CrearModificarProveedor();">
                         <i class="fa fa-external-link-square"></i>
                     </button>
                 </div>
             </div>            
         </div>
-        <div class="col-md-offset-4 col-md-2">
-            <label for="IdImprimir"></label>
-            <div class="form-group">                
-                <button type="button" class="btn btn-primary" id="btn_imprimir" onclick="Imprimir();" title="Imprimir">
-                    <i class="fa fa-print"></i>
-                </button>
-                &nbsp;&nbsp;
-                <a type="button" class="btn btn-primary" title="Nuevo" href="@Url.Action("Nuevo","NotaCredito",new { Area = "CuentasPorPagar", IdEmpresa = Model.IdEmpresa },null)">
-                    <i class="fa fa-plus"></i>
-                </a>
-            </div>
-        </div>
+
         <div class="row" id="div_tipo">
             <div class="col-md-6">
                 <div class="col-md-4">
