--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaDebito/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaDebito/Modificar.cshtml
@@ -37,6 +37,26 @@
     @Html.HiddenFor(q => q.IdTipoCbte_Nota)
 
 <div class="row">
+    <div class="col-md-12">
+        <div class="col-md-offset-10 col-md-1">
+            <label for="IdImprimir"></label>
+            <div class="form-group">
+                <button type="button" class="btn btn-primary form-control" id="btn_imprimir" onclick="Imprimir();" title="Imprimir">
+                    <i class="fa fa-print"></i>
+                </button>
+            </div>
+        </div>
+        <div class="col-md-1">
+            <label for="IdImprimir"></label>
+            <div class="form-group">
+                <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo","NotaDebito",new { Area = "CuentasPorPagar", IdEmpresa = Model.IdEmpresa },null)">
+                    <i class="fa fa-plus"></i>
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row">
     <div class="col-md-6">
         <div class="col-md-6">
             <div class="form-group">
@@ -53,7 +73,7 @@
                 @Html.ValidationMessageFor(q => q.IdTipoNota, "", new { @class = "text-danger" })
             </div>
         </div>
-        <div class="col-md-11">
+        <div class="col-md-10">
             <div class="form-group">
                 <label for="IdProveedor">Proveedor*</label>
                 @Html.Partial("_CmbProveedor_CXP", Model.IdProveedor)
@@ -61,10 +81,10 @@
             </div>
         </div>
 
-        <div class="col-md-1">
+        <div class="col-md-2">
             <div class="form-group">
                 <label for="IdCliente"></label>
-                <button type="button" class="btn btn-primary" title="Modificar proveedor" onclick="CrearModificarProveedor();">
+                <button type="button" class="btn btn-primary form-control" title="Modificar proveedor" onclick="CrearModificarProveedor();">
                     <i class="fa fa-external-link-square"></i>
                 </button>
             </div>
@@ -171,23 +191,11 @@
 
     <div class="row">
         <div class="col-md-12">
-            <div class="col-md-10">
+            <div class="col-md-12">
                 <div class="form-group">
                     <label for="cn_observacion">Observación*</label>
                     @Html.TextBoxFor(q => q.cn_observacion, new { @class = "form-control", @id = "observacion" })
                     @Html.ValidationMessageFor(q => q.cn_observacion, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="col-md-2">
-                <label for="IdImprimir"></label>
-                <div class="form-group">
-                    <button type="button" class="btn btn-primary" id="btn_imprimir" onclick="Imprimir();" title="Imprimir">
-                        <i class="fa fa-print"></i>
-                    </button>
-                    &nbsp;&nbsp;
-                    <a type="button" class="btn btn-primary" title="Nuevo" href="@Url.Action("Nuevo","NotaDebito",new { Area = "CuentasPorPagar", IdEmpresa = Model.IdEmpresa },null)">
-                        <i class="fa fa-plus"></i>
-                    </a>
                 </div>
             </div>
         </div>
