--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/OrdenPago/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/OrdenPago/Modificar.cshtml
@@ -150,6 +150,22 @@
                     </div>
                 </div>
             </div>
+            <div class="col-md-1">
+                <label for="IdImprimir"></label>
+                <div class="form-group">
+                    <button type="button" class="btn btn-primary form-control" id="btn_imprimir" onclick="Imprimir();" title="Imprimir">
+                        <i class="fa fa-print"></i>
+                    </button>
+                </div>
+            </div>
+            <div class="col-md-1">
+                <label for="IdImprimir"></label>
+                <div class="form-group">
+                    <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo","OrdenPago",new { Area = "CuentasPorPagar", IdEmpresa = Model.IdEmpresa },null)">
+                        <i class="fa fa-plus"></i>
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
     <div class="row">
@@ -224,18 +240,6 @@
                     <label for="IdSolicitudPago"># Solicitud</label>
                     @Html.TextBoxFor(q => q.IdSolicitudPago, new { @class = "form-control", @id = "IdSolicitudPago" })
                     @Html.ValidationMessageFor(q => q.IdSolicitudPago, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="col-md-2">
-                <label for="IdImprimir"></label>
-                <div class="form-group">                    
-                    <button type="button" class="btn btn-primary" id="btn_imprimir" onclick="Imprimir();" title="Imprimir">
-                        <i class="fa fa-print"></i>
-                    </button>
-                    &nbsp;&nbsp;
-                    <a type="button" class="btn btn-primary" title="Nuevo" href="@Url.Action("Nuevo","OrdenPago",new { Area = "CuentasPorPagar", IdEmpresa = Model.IdEmpresa },null)">
-                        <i class="fa fa-plus"></i>
-                    </a>
                 </div>
             </div>
         </div>
