--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/SolicitudPago/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/SolicitudPago/Modificar.cshtml
@@ -73,26 +73,30 @@
                                         <i class="fa fa-calendar"></i>
                                     </div>
                                     @Html.DevExpress().DateEditFor(q => q.Fecha, settings =>
-                           {
-                               settings.Name = "Fecha";
-                               settings.Properties.UseMaskBehavior = true;
-                               settings.Properties.EditFormat = EditFormat.Date;
-                               settings.Properties.EditFormatString = "dd/MM/yyyy";
-                               settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
-                               settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                           }).GetHtml()
+                                   {
+                                       settings.Name = "Fecha";
+                                       settings.Properties.UseMaskBehavior = true;
+                                       settings.Properties.EditFormat = EditFormat.Date;
+                                       settings.Properties.EditFormatString = "dd/MM/yyyy";
+                                       settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                                       settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                                   }).GetHtml()
                                     @Html.ValidationMessageFor(q => q.Fecha, "", new { @class = "text-danger" })
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-2">
+                        <div class="col-md-1">
                             <label for="IdImprimir"></label>
                             <div class="form-group">                                
-                                <button type="button" class="btn btn-primary" id="btn_imprimir" onclick="Imprimir();" title="Imprimir">
+                                <button type="button" class="btn btn-primary form-control" id="btn_imprimir" onclick="Imprimir();" title="Imprimir">
                                     <i class="fa fa-print"></i>
                                 </button>
-                                &nbsp;&nbsp;
-                                <a type="button" class="btn btn-primary" title="Nuevo" href="@Url.Action("Nuevo","SolicitudPago",new { Area = "CuentasPorPagar", IdEmpresa = Model.IdEmpresa },null)">
+                            </div>
+                        </div>
+                        <div class="col-md-1">
+                            <label for="IdImprimir"></label>
+                            <div class="form-group">
+                                <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo","SolicitudPago",new { Area = "CuentasPorPagar", IdEmpresa = Model.IdEmpresa },null)">
                                     <i class="fa fa-plus"></i>
                                 </a>
                             </div>
